<resources>
    <string name="app_name" translatable="false">Beefficient</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="profile_photo">Profile photo</string>
    <string name="all_tasks">All tasks</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="calendar">Calendar</string>
    <string name="inbox">Inbox</string>
    <string name="projects">Projects</string>
    <string name="labels">Labels</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="show_completed">Show completed</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="no_tasks">No tasks</string>
    <string name="empty_title_message">Title can\'t be empty</string>
    <string name="edit_task">Edit task</string>
    <string name="add_task">Add task</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="loading">Loading</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="no_data">No data</string>
    <string name="menu_delete_task">Delete</string>
    <string name="light_blue">Light blue</string>
    <string name="black">Black</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="show_all">Show all</string>
    <string name="no_completed_tasks">No completed tasks</string>
    <string name="no_active_tasks">No active tasks</string>
    <string name="task_deleted">Task deleted</string>
    <string name="task_saved">Task saved</string>
    <string name="task_edited">Task edited</string>
    <string name="project">Project</string>
    <string name="past">Past</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next week</string>
    <string name="all_time">All time</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_filter">Filter</string>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_date">Date</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very high</string>
    <string name="select_project">Select project</string>
    <string name="cancel">Cancel</string>
    <string name="select_priority">Select priority</string>
    <string name="date">Date</string>
    <string name="select">Select</string>
    <string name="icon">Icon</string>
    <string name="project_color">Project color</string>
    <string name="reminders">Reminders</string>
    <string name="due_date">Due date</string>
    <string name="date_not_set">Not set</string>
    <string name="complete_task">Complete</string>
    <string name="menu_clear_date">Clear date</string>
    <string name="no_projects">No projects</string>
    <string name="time">Time</string>
    <string name="clear_time">Clear</string>
</resources>
