<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity">
    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/menu_item_filter"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_item_all_tasks"
                android:title="@string/nav_all" />
            <item
                android:id="@+id/menu_item_active_tasks"
                android:title="@string/nav_active" />
            <item
                android:id="@+id/menu_item_completed_tasks"
                android:title="@string/nav_completed" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_item_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_item_sortby_projects"
                android:title="@string/nav_projects" />
            <item
                android:id="@+id/menu_item_sortby_date"
                android:title="@string/nav_date" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_item_clear"
        android:title="@string/menu_clear"
        app:showAsAction="never" />
</menu>