<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_today"
        android:icon="@drawable/ic_today"
        android:title="@string/today" />
    <item
        android:id="@+id/menu_item_next_week"
        android:icon="@drawable/ic_today"
        android:title="@string/next_week" />
    <!--<item-->
        <!--android:id="@+id/menu_item_calendar"-->
        <!--android:icon="@drawable/ic_date_range"-->
        <!--android:title="@string/calendar" />-->

    <item
        android:id="@+id/menu_item_inbox"
        android:icon="@drawable/ic_inbox"
        android:title="@string/inbox"/>

    <item
        android:id="@+id/menu_item_orijects"
        android:icon="@drawable/ic_project"
        android:title="@string/projects"/>
</menu>